# nomsbc

./: .gitignore  CMakeLists.txt
src/darwin/: audio_tap.c  audio_tap.h  dnn_infer.c  dnn_infer.h  main.c  speech_detect.c  speech_detect.h  weights.c  weights.h
src/data/: prep_data.c  sbc_codec.c  sbc_codec.h
src/dsp/: cepstral.c  cepstral.h  features.c  features.h  fft_wrap.c  fft_wrap.h  pitch.c  pitch.h
src/modules/: adacomb.c  adacomb.h  adaconv.c  adaconv.h  adashape.c  adashape.h  bwe.c  bwe.h
src/pipeline/: demo.c  enhance.c  enhance.h
training/: dataset.py  discriminator.py  export_weights.py  losses.py  model.py  pyproject.toml  requirements.txt  train.py
