[project]
name = "nolace-msbc-training"
version = "0.1.0"
description = "Training pipeline for NoLACE-mSBC"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "soundfile>=0.12",
    "tqdm>=4.65",
]

[project.scripts]
nolace-train = "train:main"
nolace-export = "export_weights:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
